add API support and search fragment.

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -42,6 +42,7 @@
         <item>@string/mp.fragment.title.music</item>
         <item>@string/mp.fragment.title.local_files</item>
         <item>@string/mp.fragment.title.settings</item>
+        <item>@string/mp.fragment.title.search</item>
     </string-array>
 
     <!-- Music -->
