--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="mp.fragment.title.music">Music</string>
     <string name="mp.fragment.title.local_files">Local Files</string>
     <string name="mp.fragment.title.settings">Settings</string>
+    <string name="mp.fragment.title.search">Search</string>
 
     <string name="mp.activity.title.file_system">SDCard</string>
 
@@ -42,6 +43,7 @@
         <item>@string/mp.fragment.title.music</item>
         <item>@string/mp.fragment.title.local_files</item>
         <item>@string/mp.fragment.title.settings</item>
+        <item>@string/mp.fragment.title.search</item>
     </string-array>
 
     <!-- Music -->
