--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1,31 +1,30 @@
 <resources>
-    <string name="mp.app.name">音乐播放器</string>
-
-    <string name="mp.list.layoutManager.linear">LinearLayoutManager</string>
+    <string name="mp_app_name">音乐播放器</string>
 
     <!-- Common -->
 
-    <string name="mp.cancel">取消</string>
-    <string name="mp.Confirm">确认</string>
+    <string name="mp_cancel">取消</string>
+    <string name="mp_Confirm">确认</string>
 
     <!-- Activity/Fragment Titles -->
-    <string name="mp.fragment.title.play_list">播放列表</string>
-    <string name="mp.fragment.title.music">音乐</string>
-    <string name="mp.fragment.title.local_files">本地音乐</string>
-    <string name="mp.fragment.title.settings">设置</string>
+    <string name="mp_fragment_title_play_list">播放列表</string>
+    <string name="mp_fragment_title_music">音乐</string>
+    <string name="mp_fragment_title_local_files">本地音乐</string>
+    <string name="mp_fragment_title_settings">设置</string>
+    <string name="mp_fragment_title_search">搜索</string>
 
-    <string name="mp.activity.title.file_system">SD卡</string>
+    <string name="mp_activity_title_file_system">SD卡</string>
 
     <!-- Play Lists -->
-    <string name="mp.play_list.favorite">收藏</string>
-    <string name="mp.play_list.footer.add">添加播放列表</string>
-    <string name="mp.play_list.footer.end_summary_formatter">总共有 %d 个播放列表</string>
+    <string name="mp_play_list_favorite">收藏</string>
+    <string name="mp_play_list_footer_add">添加播放列表</string>
+    <string name="mp_play_list_footer_end_summary_formatter">总共有 %d 个播放列表</string>
 
-    <string name="mp.play_list.create">创建播放列表</string>
-    <string name="mp.play_list.created">创建 %s </string>
-    <string name="mp.play_list.edit">编辑播放列表</string>
-    <string name="mp.play_list.dialog.hint">播放列表名称</string>
-    <string name="mp.play_list.dialog.add_to">添加至播放列表</string>
+    <string name="mp_play_list_create">创建播放列表</string>
+    <string name="mp_play_list_created">创建 %s </string>
+    <string name="mp_play_list_edit">编辑播放列表</string>
+    <string name="mp_play_list_dialog_hint">播放列表名称</string>
+    <string name="mp_play_list_dialog_add_to">添加至播放列表</string>
 
     <plurals name="mp_play_list_items_formatter">
         <item quantity="one">%d 首歌</item>
@@ -33,34 +32,34 @@
     </plurals>
 
     <!-- Play Lists - Details -->
-    <string name="mp.play_list.details.empty">没有音乐，去添加一些吧!</string>
-    <string name="mp.play_list.details.footer.end_summary_formatter">总共有 %d 首歌</string>
+    <string name="mp_play_list_details_empty">没有音乐，去添加一些吧!</string>
+    <string name="mp_play_list_details_footer_end_summary_formatter">总共有 %d 首歌</string>
 
     <!-- Main -->
     <string-array name="mp_main_titles">
-        <item>@string/mp.fragment.title.play_list</item>
-        <item>@string/mp.fragment.title.music</item>
-        <item>@string/mp.fragment.title.local_files</item>
-        <item>@string/mp.fragment.title.settings</item>
-        <item>@string/mp.fragment.title.search</item>
+        <item>@string/mp_fragment_title_play_list</item>
+        <item>@string/mp_fragment_title_music</item>
+        <item>@string/mp_fragment_title_local_files</item>
+        <item>@string/mp_fragment_title_settings</item>
+        <item>@string/mp_fragment_title_search</item>
     </string-array>
 
     <!-- Music -->
 
-    <string name="mp.music.default_duration">00:00</string>
+    <string name="mp_music_default_duration">00:00</string>
 
     <!-- Local Files -->
-    <string name="mp.local_files.segmented.all">所有歌曲</string>
-    <string name="mp.local_files.segmented.folder">文件夹</string>
+    <string name="mp_local_files_segmented_all">所有歌曲</string>
+    <string name="mp_local_files_segmented_folder">文件夹</string>
 
-    <string name="mp.local_files.music_list.empty">设备上没有找到音乐</string>
-    <string name="mp.local_files.music_list.end_summary_formatter">总共有 %d 首歌</string>
-    <string name="mp.local_files.folder_list.end_summary_formatter">总共有 %d 个文件夹</string>
-    <string name="mp.local_files.folder_list.item_info_formatter" formatted="false">%d 首歌 | %s</string>
-    <string name="mp.local_files.folder_list.add_folder">添加文件夹</string>
+    <string name="mp_local_files_music_list_empty">设备上没有找到音乐</string>
+    <string name="mp_local_files_music_list_end_summary_formatter">总共有 %d 首歌</string>
+    <string name="mp_local_files_folder_list_end_summary_formatter">总共有 %d 个文件夹</string>
+    <string name="mp_local_files_folder_list_item_info_formatter" formatted="false">%d 首歌 | %s</string>
+    <string name="mp_local_files_folder_list_add_folder">添加文件夹</string>
 
-    <string name="mp.local_files.file_system.empty">此目录下没有文件</string>
-    <string name="mp.local_files.file_system.menu.done">完成</string>
+    <string name="mp_local_files_file_system_empty">此目录下没有文件</string>
+    <string name="mp_local_files_file_system_menu_done">完成</string>
 
     <!-- Local Files - File System -->
     <plurals name="mp_folders_created_formatter">
@@ -78,10 +77,13 @@
     </plurals>
 
     <!-- Menu -->
-    <string name="mp.menu.add_to_play_list">添加至播放列表</string>
-    <string name="mp.menu.create_play_list">创建播放列表</string>
-    <string name="mp.menu.refresh">刷新</string>
-    <string name="mp.menu.play_now">立即播放</string>
-    <string name="mp.menu.rename">重命名</string>
-    <string name="mp.menu.delete">删除</string>
+    <string name="mp_menu_add_to_play_list">添加至播放列表</string>
+    <string name="mp_menu_create_play_list">创建播放列表</string>
+    <string name="mp_menu_refresh">刷新</string>
+    <string name="mp_menu_play_now">立即播放</string>
+    <string name="mp_menu_rename">重命名</string>
+    <string name="mp_menu_delete">删除</string>
+
+    <!-- Settings -->
+    <string name="mp_fragment_setting_login">微博登陆</string>
 </resources>
