--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,32 +1,30 @@
 <resources>
-    <string name="mp.app.name">Music Player</string>
-
-    <string name="mp.list.layoutManager.linear">LinearLayoutManager</string>
+    <string name="mp_app_name">Music Player</string>
 
     <!-- Common -->
 
-    <string name="mp.cancel">Cancel</string>
-    <string name="mp.Confirm">Confirm</string>
+    <string name="mp_cancel">Cancel</string>
+    <string name="mp_Confirm">Confirm</string>
 
     <!-- Activity/Fragment Titles -->
-    <string name="mp.fragment.title.play_list">Play List</string>
-    <string name="mp.fragment.title.music">Music</string>
-    <string name="mp.fragment.title.local_files">Local Files</string>
-    <string name="mp.fragment.title.settings">Settings</string>
-    <string name="mp.fragment.title.search">Search</string>
+    <string name="mp_fragment_title_play_list">Play List</string>
+    <string name="mp_fragment_title_music">Music</string>
+    <string name="mp_fragment_title_local_files">Local Files</string>
+    <string name="mp_fragment_title_settings">Settings</string>
+    <string name="mp_fragment_title_search">Search</string>
 
-    <string name="mp.activity.title.file_system">SDCard</string>
+    <string name="mp_activity_title_file_system">SDCard</string>
 
     <!-- Play Lists -->
-    <string name="mp.play_list.favorite">Favorite</string>
-    <string name="mp.play_list.footer.add">Add play list</string>
-    <string name="mp.play_list.footer.end_summary_formatter">%d play lists in total</string>
+    <string name="mp_play_list_favorite">Favorite</string>
+    <string name="mp_play_list_footer_add">Add play list</string>
+    <string name="mp_play_list_footer_end_summary_formatter">%d play lists in total</string>
 
-    <string name="mp.play_list.create">Create play list</string>
-    <string name="mp.play_list.created">%s created</string>
-    <string name="mp.play_list.edit">Edit play list</string>
-    <string name="mp.play_list.dialog.hint">Play list name</string>
-    <string name="mp.play_list.dialog.add_to">Add to play list</string>
+    <string name="mp_play_list_create">Create play list</string>
+    <string name="mp_play_list_created">%s created</string>
+    <string name="mp_play_list_edit">Edit play list</string>
+    <string name="mp_play_list_dialog_hint">Play list name</string>
+    <string name="mp_play_list_dialog_add_to">Add to play list</string>
 
     <plurals name="mp_play_list_items_formatter">
         <item quantity="one">%d song</item>
@@ -34,34 +32,34 @@
     </plurals>
 
     <!-- Play Lists - Details -->
-    <string name="mp.play_list.details.empty">No music here, go add some!</string>
-    <string name="mp.play_list.details.footer.end_summary_formatter">%d songs in total</string>
+    <string name="mp_play_list_details_empty">No music here, go add some!</string>
+    <string name="mp_play_list_details_footer_end_summary_formatter">%d songs in total</string>
 
     <!-- Main -->
     <string-array name="mp_main_titles">
-        <item>@string/mp.fragment.title.play_list</item>
-        <item>@string/mp.fragment.title.music</item>
-        <item>@string/mp.fragment.title.local_files</item>
-        <item>@string/mp.fragment.title.settings</item>
-        <item>@string/mp.fragment.title.search</item>
+        <item>@string/mp_fragment_title_play_list</item>
+        <item>@string/mp_fragment_title_music</item>
+        <item>@string/mp_fragment_title_local_files</item>
+        <item>@string/mp_fragment_title_settings</item>
+        <item>@string/mp_fragment_title_search</item>
     </string-array>
 
     <!-- Music -->
 
-    <string name="mp.music.default_duration">00:00</string>
+    <string name="mp_music_default_duration">00:00</string>
 
     <!-- Local Files -->
-    <string name="mp.local_files.segmented.all">All</string>
-    <string name="mp.local_files.segmented.folder">Folder</string>
+    <string name="mp_local_files_segmented_all">All</string>
+    <string name="mp_local_files_segmented_folder">Folder</string>
 
-    <string name="mp.local_files.music_list.empty">No music found on this device</string>
-    <string name="mp.local_files.music_list.end_summary_formatter">%d songs in total</string>
-    <string name="mp.local_files.folder_list.end_summary_formatter">%d folders in total</string>
-    <string name="mp.local_files.folder_list.item_info_formatter" formatted="false">%d songs | %s</string>
-    <string name="mp.local_files.folder_list.add_folder">Add Folder</string>
+    <string name="mp_local_files_music_list_empty">No music found on this device</string>
+    <string name="mp_local_files_music_list_end_summary_formatter">%d songs in total</string>
+    <string name="mp_local_files_folder_list_end_summary_formatter">%d folders in total</string>
+    <string name="mp_local_files_folder_list_item_info_formatter" formatted="false">%d songs | %s</string>
+    <string name="mp_local_files_folder_list_add_folder">Add Folder</string>
 
-    <string name="mp.local_files.file_system.empty">No files under this directory</string>
-    <string name="mp.local_files.file_system.menu.done">Done</string>
+    <string name="mp_local_files_file_system_empty">No files under this directory</string>
+    <string name="mp_local_files_file_system_menu_done">Done</string>
 
     <!-- Local Files - File System -->
     <plurals name="mp_folders_created_formatter">
@@ -79,10 +77,13 @@
     </plurals>
 
     <!-- Menu -->
-    <string name="mp.menu.add_to_play_list">Add to play list</string>
-    <string name="mp.menu.create_play_list">Create play list</string>
-    <string name="mp.menu.refresh">Refresh</string>
-    <string name="mp.menu.play_now">Play now</string>
-    <string name="mp.menu.rename">Rename</string>
-    <string name="mp.menu.delete">Delete</string>
+    <string name="mp_menu_add_to_play_list">Add to play list</string>
+    <string name="mp_menu_create_play_list">Create play list</string>
+    <string name="mp_menu_refresh">Refresh</string>
+    <string name="mp_menu_play_now">Play now</string>
+    <string name="mp_menu_rename">Rename</string>
+    <string name="mp_menu_delete">Delete</string>
+
+    <!-- Settings -->
+    <string name="mp_fragment_setting_login">Login Weibo</string>
 </resources>
