--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,101 +1,101 @@
 <resources>
-    <string name="mp_app_name">Music Player</string>
+    <string name="app_name">Music Player</string>
 
     <!-- Common -->
 
-    <string name="mp_cancel">Cancel</string>
-    <string name="mp_Confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
+    <string name="confirm">Confirm</string>
 
     <!-- Activity/Fragment Titles -->
-    <string name="mp_fragment_title_play_list">Play List</string>
-    <string name="mp_fragment_title_music">Music</string>
-    <string name="mp_fragment_title_local_files">Local Files</string>
-    <string name="mp_fragment_title_settings">Settings</string>
-    <string name="mp_fragment_title_search">Search</string>
+    <string name="fragment_title_play_list">Play List</string>
+    <string name="fragment_title_music">Music</string>
+    <string name="fragment_title_local_files">Local Files</string>
+    <string name="fragment_title_settings">Settings</string>
+    <string name="fragment_title_search">Search</string>
 
-    <string name="mp_activity_title_file_system">SDCard</string>
+    <string name="activity_title_file_system">SDCard</string>
 
     <!-- Play Lists -->
-    <string name="mp_play_list_favorite">Favorite</string>
-    <string name="mp_play_list_footer_add">Add play list</string>
-    <string name="mp_play_list_footer_end_summary_formatter">%d play lists in total</string>
+    <string name="play_list_favorite">Favorite</string>
+    <string name="play_list_footer_add">Add play list</string>
+    <string name="play_list_footer_end_summary_formatter">%d play lists in total</string>
 
-    <string name="mp_play_list_create">Create play list</string>
-    <string name="mp_play_list_created">%s created</string>
-    <string name="mp_play_list_edit">Edit play list</string>
-    <string name="mp_play_list_dialog_hint">Play list name</string>
-    <string name="mp_play_list_dialog_add_to">Add to play list</string>
+    <string name="play_list_create">Create play list</string>
+    <string name="play_list_created">%s created</string>
+    <string name="play_list_edit">Edit play list</string>
+    <string name="play_list_dialog_hint">Play list name</string>
+    <string name="play_list_dialog_add_to">Add to play list</string>
 
-    <plurals name="mp_play_list_items_formatter">
+    <plurals name="play_list_items_formatter">
         <item quantity="one">%d song</item>
         <item quantity="other">%d songs</item>
     </plurals>
 
-    <string name="mp_play_list_daily">Daily Recommendation</string>
+    <string name="play_list_daily">Daily Recommendation</string>
 
     <!-- Play Lists - Details -->
-    <string name="mp_play_list_details_empty">No music here, go add some!</string>
-    <string name="mp_play_list_details_footer_end_summary_formatter">%d songs in total</string>
+    <string name="play_list_details_empty">No music here, go add some!</string>
+    <string name="play_list_details_footer_end_summary_formatter">%d songs in total</string>
 
     <!-- Main -->
-    <string-array name="mp_main_titles">
-        <item>@string/mp_fragment_title_play_list</item>
-        <item>@string/mp_fragment_title_music</item>
-        <item>@string/mp_fragment_title_local_files</item>
-        <item>@string/mp_fragment_title_settings</item>
-        <item>@string/mp_fragment_title_search</item>
+    <string-array name="main_titles">
+        <item>@string/fragment_title_play_list</item>
+        <item>@string/fragment_title_music</item>
+        <item>@string/fragment_title_local_files</item>
+        <item>@string/fragment_title_settings</item>
+        <item>@string/fragment_title_search</item>
     </string-array>
 
     <!-- Music -->
 
-    <string name="mp_music_default_duration">00:00</string>
+    <string name="music_default_duration">00:00</string>
 
     <!-- Local Files -->
-    <string name="mp_local_files_segmented_all">All</string>
-    <string name="mp_local_files_segmented_folder">Folder</string>
+    <string name="local_files_segmented_all">All</string>
+    <string name="local_files_segmented_folder">Folder</string>
 
-    <string name="mp_local_files_music_list_empty">No music found on this device</string>
-    <string name="mp_local_files_music_list_end_summary_formatter">%d songs in total</string>
-    <string name="mp_local_files_folder_list_end_summary_formatter">%d folders in total</string>
-    <string name="mp_local_files_folder_list_item_info_formatter" formatted="false">%d songs | %s</string>
-    <string name="mp_local_files_folder_list_add_folder">Add Folder</string>
+    <string name="local_files_music_list_empty">No music found on this device</string>
+    <string name="local_files_music_list_end_summary_formatter">%d songs in total</string>
+    <string name="local_files_folder_list_end_summary_formatter">%d folders in total</string>
+    <string name="local_files_folder_list_item_info_formatter" formatted="false">%d songs | %s</string>
+    <string name="local_files_folder_list_add_folder">Add Folder</string>
 
-    <string name="mp_local_files_file_system_empty">No files under this directory</string>
-    <string name="mp_local_files_file_system_menu_done">Done</string>
+    <string name="local_files_file_system_empty">No files under this directory</string>
+    <string name="local_files_file_system_menu_done">Done</string>
 
     <!-- Local Files - File System -->
-    <plurals name="mp_folders_created_formatter">
+    <plurals name="folders_created_formatter">
         <item quantity="one">%d new folder created</item>
         <item quantity="other">%d new folders created</item>
     </plurals>
-    <plurals name="mp_directory_items_formatter">
+    <plurals name="directory_items_formatter">
         <item quantity="one">%d item</item>
         <item quantity="other">%d items</item>
     </plurals>
 
-    <plurals name="mp_selected_folders_formatter">
+    <plurals name="selected_folders_formatter">
         <item quantity="one">%d folder selected</item>
         <item quantity="other">%d folders selected</item>
     </plurals>
 
     <!-- Menu -->
-    <string name="mp_menu_add_to_play_list">Add to play list</string>
-    <string name="mp_menu_create_play_list">Create play list</string>
-    <string name="mp_menu_refresh">Refresh</string>
-    <string name="mp_menu_play_now">Play now</string>
-    <string name="mp_menu_rename">Rename</string>
-    <string name="mp_menu_delete">Delete</string>
+    <string name="menu_add_to_play_list">Add to play list</string>
+    <string name="menu_create_play_list">Create play list</string>
+    <string name="menu_refresh">Refresh</string>
+    <string name="menu_play_now">Play now</string>
+    <string name="menu_rename">Rename</string>
+    <string name="menu_delete">Delete</string>
 
     <!-- Settings -->
-    <string name="mp_fragment_setting_login">Login Weibo</string>
-    <string name="mp_fragment_setting_login_successful">Login successful</string>
-    <string name="mp_fragment_setting_login_failed">Login failed</string>
+    <string name="fragment_setting_login">Login Weibo</string>
+    <string name="fragment_setting_login_successful">Login successful</string>
+    <string name="fragment_setting_login_failed">Login failed</string>
 
     <!-- Pref -->
 
     <!-- Action Toast -->
-    <string name="mp_toast_start_download">start downloading…</string>
-    <string name="mp_toast_download_complete">download complete</string>
-    <string name="mp_toast_download_fail">download failed</string>
+    <string name="toast_start_download">start downloading…</string>
+    <string name="toast_download_complete">download complete</string>
+    <string name="toast_download_fail">download failed</string>
 
 </resources>
