--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,7 +87,8 @@
     <string name="menu_delete">Delete</string>
 
     <!-- Settings -->
-    <string name="fragment_setting_login">Login Weibo</string>
+    <string name="fragment_setting_weibo_login">Weibo Login</string>
+    <string name="fragment_setting_email_login">Netease Email Login</string>
     <string name="fragment_setting_login_successful">Login successful</string>
     <string name="fragment_setting_login_failed">Login failed</string>
 
